--- a/tip/558.md
+++ b/tip/558.md
@@ -12,11 +12,11 @@
 
 # Abstract
 
-This TIP proposes a basic mechanism for implementing a `configure` method
+This TIP proposes a basic mechanism for implementing a **configure** method
 suitable for implementing simple properties such as are found in the
-`chan configure` command (while also supporting inheritance). It does _not_
-provide the mechanism needed for the more sophisticated `configure`/`cget` of
-a Tk widget.
+**chan configure** command (while also supporting inheritance). It does _not_
+provide the mechanism needed for the more sophisticated **configure**/**cget**
+of a Tk widget.
 
 # Rationale and Design Considerations
 
@@ -24,7 +24,7 @@ A common requirement for user objects that work like existing Tcl subsystems
 is that they support a way of being configured. There are many ways that such
 configuration systems can work, but the two most well known are probably:
 
-1. The channel configuration system (as in `chan configure`/`fconfigure`).
+1. The channel configuration system (as in **chan configure**/**fconfigure**).
 
 2. Tk widgets.
 
@@ -71,21 +71,21 @@ are out of the scope of this TIP.
 
 Classes and objects will gain two extra slots (see [TIP #380](380.md)) each,
 being the list of readable properties and the list of writable properties of
-the class or object. (These slots represent sets; just as with `variable`
+the class or object. (These slots represent sets; just as with **variable**
 slots, the order of the elements in the slots will not be important, but a
 uniqueness constraint will be enforced so that no element can be in a slot
 twice.) The slot configuration commands will be placed in the namespaces
-`::oo::configuresupport` (which is otherwise just an ordinary namespace) as
+**::oo::configuresupport** (which is otherwise just an ordinary namespace) as
 they are not intended for ordinary user code to use directly: they will be:
 
- * **::oo::configuresupport::readableproperties** for configuring the slot
-    listing readable properties of a class.
- * **::oo::configuresupport::writableproperties** for configuring the slot
-    listing writable properties of a class.
- * **::oo::configuresupport::objreadableproperties** for configuring the slot
-    listing readable properties of an instance.
- * **::oo::configuresupport::objwritableproperties** for configuring the slot
-    listing writable properties of an instance.
+ * **readableproperties** (i.e., `::oo::configuresupport::readableproperties`)
+    for configuring the slot listing readable properties of a class.
+ * **writableproperties** for configuring the slot listing writable properties
+    of a class.
+ * **objreadableproperties** for configuring the slot listing readable
+    properties of an instance.
+ * **objwritableproperties** for configuring the slot listing writable
+    properties of an instance.
 
 The slots enforce uniqueness of property names within the slot (by removing
 duplicates), but otherwise impose no policy on what names are acceptable or
@@ -93,7 +93,7 @@ define any semantics of what a property actually is or how it is manipulated
 beyond the discovery mechanism below. Order within these slots is not
 considered to be significant.
 
-There will be also related `info` subcommands:
+There will be also related **info** subcommands:
 
  * **info class properties** _cls_ ?_options..._?
 
@@ -105,7 +105,7 @@ There will be also related `info` subcommands:
     the current class; the ones on the full class hierarchy up to the class
     are obtained by passing the option **-all**.
 
-    The reported list will be sorted, as if by `lsort -ascii -unique`.
+    The reported list will be sorted, as if by **lsort -ascii -unique**.
 
  * **info object properties** _obj_ ?_options..._?
 
@@ -128,23 +128,23 @@ is up to scripted classes that build on this.
 
 Making use of these basic capabilities (themselves intended to be usable with
 other configuration mechanisms out of the scope of this TIP or entirely) will
-be a new metaclass, **::oo::configurable**, which will provide the
+be a new metaclass, **oo::configurable**, which will provide the
 implementation of the **configure** method (the only method it provides) and
 (via [TIP #524](524.md) capabilities) the user visible **property**
 declarations. This class will be written in pure Tcl.
 
-As **::oo::configurable** is a metaclass, it is used to _create_ configurable
+As **oo::configurable** is a metaclass, it is used to _create_ configurable
 classes and not just as a superclass/mixin. The instances of the classes it
 creates will be the actually configurable entities. A class should only
-inherit from **::oo::configurable** when it wishes to be a metaclass that
-makes classes that have configurable properties on their instances.
+inherit from **oo::configurable** when it wishes to be a metaclass that makes
+classes that have configurable properties on their instances.
 
 ### Configure Method
 
-The **configure** method provided to classes created by **::oo::configurable**
+The **configure** method provided to classes created by **oo::configurable**
 will support three modes of operation:
 
- 1. _obj_ **configure** —
+ 1. _obj_ **configure**
 
     This returns a dictionary of all readable properties from the _obj_
     instance, its class and superclasses and all mixins, and their values.
@@ -168,16 +168,17 @@ delegates the actual reading of the property to a
 method, **&lt;ReadProp**_-prop_**&gt;** (e.g., for a property `-foo`, the
 method will be `<ReadProp-foo>`) which is assumed to take no extra arguments
 and return the value of the property. Any error produced by this method (or a
-`break` or `continue` result) will result in **configure** producing an error;
-for errors, the message will be identical.
+`TCL_BREAK` or `TCL_CONTINUE` result) will result in **configure** producing
+an error; for errors, the message will be identical.
 
 When **configure** determines that it wishes to write a property, _-prop_, it
 delegates the actual writing of the property to a
 method, **&lt;WriteProp**_-prop_**&gt;** (e.g., for a property `-foo`, the
 method will be `<WriteProp-foo>`) which is assumed to take one extra argument
-that is the value to write. Any error produced by this method (or a `break` or
-`continue` result) will result in **configure** producing an error; for
-errors, the message will be identical. Successful results will be ignored.
+that is the value to write. Any error produced by this method (or a
+`TCL_BREAK` or `TCL_CONTINUE` result) will result in **configure** producing
+an error; for errors, the message will be identical. Successful results will
+be ignored.
 
 Note that the property reader and writer methods described above are ordinary
 methods subject to normal override rules, and will likely be non-exported
@@ -185,7 +186,7 @@ methods by default.
 
 ### Property Declarations for Classes
 
-When a class is a subclass of `::oo::configurable` (or has it mixed in), it
+When a class is a subclass of **oo::configurable** (or has it mixed in), it
 will have an extra declaration:
 
  * **property** _name_ ?_-option value_...? ?_name_ ?_-option value_...??...
@@ -195,9 +196,11 @@ can be configured by the instances of that class. The property will be named
 with a single minus sign preceding it (e.g., `property foo` creates something
 that can be configured as `-foo`). It will be an error for _name_ to begin
 with a `-` character (because this is used to indicate options to the command
-that modify the nature of the property being defined).
+that modify the nature of the property being defined), to not be a simple word
+(because it makes handling substitutions complex), or to not be suitable as a
+simple variable name (i.e., must not contain `::`, `(` or `)`).
 
-This definition command is `namespace export`ed from the namespace
+This definition command is **namespace export**ed from the namespace
 **::oo::configuresupport::configurableclass** so that it may be used in other
 definition language namespaces easily.
 
@@ -206,7 +209,7 @@ a pluralised alias. It will _not_ be a documented feature.)
 
 ### Property Declarations for Instances
 
-When an object is an instance (direct or indirect) of `::oo::configurable` (or
+When an object is an instance (direct or indirect) of **oo::configurable** (or
 has it mixed in), it will have an extra declaration:
 
  * **property** _name_ ?_-option value_...?  ?_name_ ?_-option value_...??...
@@ -214,7 +217,7 @@ has it mixed in), it will have an extra declaration:
 This is much the same as when classes are configurable, except that it applies
 the property definition changes to the instance.
 
-This definition command is `namespace export`ed from the namespace
+This definition command is **namespace export**ed from the namespace
 **::oo::configuresupport::configurableobject** so that it may be used in other
 definition language namespaces easily.
 
@@ -252,20 +255,36 @@ single value):
 
         ::set [my varname <propNameWithoutDash>]
 
+    That is, for the declaration:
+
+        property xyz
+
+	The following getter method declaration will be done:
+
+		method <ReadProp-xyz> -unexport {} {::set [my varname xyz]}
+
  * **-set** _methodBody_
 
     This allows you to specify the body of the implementation method for
     writing the property (whose name is derived from the property name as
     specified above) in instances of the class or the object. The method will
-    take a single argument, `value`. If this option is not supplied and the
-    property is of writable or read-write kind, a default will be used that
-    just stores the argument in the instance variable with the same name as
-    the property (without leading dash).
+    take a single formal argument, `value`. If this option is not supplied and
+    the property is of writable or read-write kind, a default will be used
+    that just stores the argument in the instance variable with the same name
+    as the property (without leading dash).
 
     The default method body is (with `<propNameWithoutDash>` being substituted
     appropriately):
 
         ::set [my varname <propNameWithoutDash>] $value
+
+    That is, for the declaration:
+
+        property xyz
+
+	The following setter method declaration will be done:
+
+		method <WriteProp-xyz> -unexport {value} {::set [my varname xyz] $value}
 
 One of the main reasons for supplying a **-set** for a property is so that
 invalid values can be rejected; the default code does not reject any values at
