TIP #542 now in voting state

--- a/tip/542.md
+++ b/tip/542.md
@@ -3,7 +3,7 @@
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
 	State:          Draft
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        10-May-2019
 	Post-History:
 	Discussions-To: Tcl Core list
@@ -47,7 +47,8 @@ functions that are rarely used in extensions. Those are `Tcl_AppendUnicodeToObj(
 They all have a UTF-8 equivalent which can be used instead. Switching TCL\_UTF\_MAX
 to a different value causes a binary incompatibility, but it's not worth to do
 anything about it. That's why this TIP proposes to deprecate them, and have them
-removed completely in Tcl 9.0.
+removed completely in Tcl 9.0 (actually: they will become MODULE\_SCOPE internal
+functions in 9.0).
 
 The default compilation mode for Tcl 8.x will continue to be TCL\_UTF\_MAX=3, which is 100%
 upwards compatible with Tcl 8.6.
