--- a/tip/558.md
+++ b/tip/558.md
@@ -365,7 +365,7 @@ That can then be extended with more properties by a subclass:
 
 # Implementation
 
-See the [`tip-558`](/tcl/timeline?r=tip-558) branch.
+See the [`tip-558`](https://core.tcl-lang.org/tcl/timeline?r=tip-558) branch.
 
 # Copyright
 
