--- a/tip/552.md
+++ b/tip/552.md
@@ -34,6 +34,15 @@ The tree column counts, even if **-show tree** is not specified.
 This is to follow the semantics of #N-indexing of columns.
 Thus for value N of this option, column #N is the first one that is scrollable.
 
+## Locked vertical scrolling
+
+Adds the ability to lock the first item(s) from vertical scrolling.
+
+A new option **-titleitems** *n* is added, requesting items to be locked.
+
+TBD how this interacts with any hierarchy in those first lines.
+TBD how this interacts with striped rows.
+
 ## Cell selection
 
 Adds the ability to select individual cells as well as full rows.
@@ -47,7 +56,7 @@ In addition the **cellselection set** and **cellselection add** commands get
 a version for selecting a rectangular range.
 
 A new option **-selecttype** *type* is added to direct default bindings to
-use either item selection or cell selection.
+use either item selection or cell selection. It takes values `item` or `cell`.
 
 The **identify** subcommand is updated with the **cell** option.
 
@@ -57,7 +66,7 @@ The <<TreeviewSelect>> virtual event triggers on any selection change including 
 
 ## Striped rows
 
-A new option **-striped** *bool* is added. This makes every other row get marked
+A new option **-striped** *bool* is added. This makes every other item get marked
 with the `alternate` state, and allows the theme to draw them in a
 different color. Built in themes are updated to put something fitting
 at that color.
@@ -73,6 +82,11 @@ Built in themes are updated to define the separators.
 A new item option **-imageanchor** *anchor* is added.
 This controls the placement of the image relative to the text in an
 item's tree column. Default is "w".
+
+## Item height
+
+A new item option **-height** *height* is added.
+This controls the height of the item, in multiples of **-rowheight**. Default is 1.
 
 # Implementation
 
