--- a/tip/543.md
+++ b/tip/543.md
@@ -3,7 +3,7 @@
 	State:          Draft
 	Type:           Project
 	Tcl-Version:    9.0
-	Vote:           Pending
+	Vote:           In progress
 	Created:        10-May-2019
 	Keywords:       Tcl, traces
 	Post-History:
