fix formatting and add abstract

--- a/tip/556.md
+++ b/tip/556.md
@@ -12,6 +12,8 @@
 
 # Abstract
 
+This tip proposes to add the following oo class widget commands and functions to deal with options at the class and object level. A C function interface allows creation of new oo class like widgets.
+
 ## New oo::class like widgets
 
 **::tko::toplevel** *pathName ?option value? ..*
@@ -109,26 +111,32 @@ To compare the speed of the new widgets you can run the test frame-30.1. It will
 # Examples
 
 Create a new oo tcl widget class:
+
     oo::class create myWidget {::tko initfrom ::tko::frame}
 
 Add new methods:
+
     oo::define ::myWidget method mycmd {args} {my {*}$args}
 
 Add new class options:
+
     ::tko optionadd ::myWidget -o1 o1 O1 v1 {} {set tko(-o1) x}
 
 Add new object options:
+
     oo::define ::myWidget method mycmd {args} {my {*}$args}
     ::myWidget .x
     .x mycmd _tko optionadd -o2 o2 O2 v2 {} {puts o2=$tko(-o2)}
 
 Intercept options:
+
     oo::define ::myWidget method -width {} {
         puts "[my cget -width]->$tko(-width)->[set tko(-width) 100]"
     }
     .w configure -width 1
 
 Use option database for styles:
+
     option add *background red
     grid [tko::frame .f] -sticky nesw
     grid [label .f.l -text abc]
@@ -138,7 +146,7 @@ Use option database for styles:
  
 # Discussion
 
-See also discussion at the [wiki](http://wiki.tcl.tk/55360).
+See also discussion at the [wiki](https://wiki.tcl-lang.org/page/Tip+556%3A+Add+oo+like+widgets+to+Tk).
 
 # Open issues
 
