--- a/tip/559.md
+++ b/tip/559.md
@@ -3,7 +3,7 @@
 	State:          Draft
 	Type:           Project
 	Tcl-Version:    9.0
-	Vote:           Pending
+	Vote:           In progress
 	Created:        13-Jan-2020
 	Keywords:       Tcl, result 
 	Post-History:
