TIP #542: "Support for switchable Full Unicode support" accepted.

--- a/tip/542.md
+++ b/tip/542.md
@@ -1,15 +1,19 @@
 # TIP 542:Support for switchable Full Unicode support
 	Author:         Jan Nijtmans <jan.nijtmans@users.sf.net>
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
-	State:          Draft
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        10-May-2019
 	Post-History:
 	Discussions-To: Tcl Core list
 	Keywords:       Tcl
 	Tcl-Version:    8.7
 	Tcl-Branch:     utf-max
+	Vote-Summary:   Accepted 6/0/0
+	Votes-For:      FV, JN, KBK, KW, MC, SL
+	Votes-Against:  none
+	Votes-Present:  none
 -----
 
 # Abstract
