TIP 543  Accepted 9/0/0 Votes-For:      DP, JD, MC, KW, SL, KK, FV, DF, JN

--- a/tip/543.md
+++ b/tip/543.md
@@ -1,12 +1,17 @@
 # TIP 543: Eliminate `TCL_INTERP_DESTROYED` flag value
 	Author:         Don Porter <dgp@users.sourceforge.net>
-	State:          Draft
+	State:          Final
 	Type:           Project
 	Tcl-Version:    9.0
-	Vote:           In progress
+	Vote:           Done
 	Created:        10-May-2019
 	Keywords:       Tcl, traces
 	Post-History:
+	Tcl-Branch:	tip-543-9
+	Vote-Summary:	Accepted 9/0/0
+	Votes-For:	DP, JD, MC, KW, SL, KK, FV, DF, JN
+	Votes-Against:	none
+	Votes-Present:	none
 -----
 
 # Abstract
