Changed tko interface functions

--- a/tip/556.md
+++ b/tip/556.md
@@ -24,40 +24,46 @@ This tip proposes to add the following oo class widget commands and functions to
 
 The new widgets will contain the same functionality like the original *tk* widgets. They are *oo:class*'s and it is possible to add,change and delete methods and options dynamically. The widgets could also be used as oo *superclass*'s.
 
-> The interface functions to build new widgets in C are described in 
+The interface functions to build new widgets in C are described in 
 [`tko.3.md`](https://core.tcl-lang.org/tk/doc/tip-556/doc/tko.3.md).
 
 ## Tcl widget creation
 
-**::oo::class create** *widgetclass* { **::tko initfrom** *::tkoclass* }
+**::oo::class create** *widgetclass* { **::tko initfrom** *tkoclass* }
 
-The **tko initfrom** function is used to create new oo class like widget in Tcl.
+**::oo::class create** *widgetclass* { **::tko initwrap** *widget readonlyoptionlist ?commanlist?* }
+
+Both functions are used to create new oo class like widget in Tcl.
+The **tko initfrom** function use *tkoclass* as superclass.
+The **tko initwrap** function wraps an existing tk widget in an oo class widget.
 
 ## Class functions
 
 To provide dynamic option management at class level exists a **::tko** function.
 
-**::tko initfrom** *?::superclass?*
+**::tko initfrom** *?superclass?*
+
+**::tko initwrap** *widget readonlyoptionlist ?commandlist?*
 
 **::tko eventchanged**
 
-**::tko optionadd** *::classname ?-option dbname dbclass value flags ?body?*
+**::tko optiondef** *classname ?-option definitionlist? ..*
 
-**::tko optiondel** *::classname ?-option? ..* 
+**::tko optiondel** *classname ?-option? ..* 
 
-**::tko optionget** *::classname ?-option? ..*
+**::tko optionget** *classname ?-option? ..*
 
-**::tko optionset** *::classname ?-option {dbname dbclass value flags}? ..*
+**::tko optionhide** *classname ?-option? ..*
 
-**::tko optionhide** *::classname ?-option? ..*
+**::tko optionshow** *classname ?-option? ..*
 
-**::tko optionshow** *::classname ?-option? ..*
+A detailed description can be found in [`tko.n.md`](https://core.tcl-lang.org/tk/doc/tip-556/doc/tko.n.md).
 
 ## Widget methods
 
 To manage options on object level exists an **\_tko** method. 
 
-**my \_tko optionadd** *-option dbname dbclass value flags ?body?*
+**my \_tko optionadd** *-option {*\**}definitionlist*
 
 **my \_tko optiondel** *-option* ..
 
@@ -110,33 +116,47 @@ To compare the speed of the new widgets you can run the test frame-30.1. It will
 
 # Examples
 
-Create a new oo tcl widget class:
+    # Wrap an existing widget:
+    oo::class create ::myFrame {
+      ::tko initwrap frame {-class -container -colormap -visual}
+    }
+    myFrame .f
 
+    # Create a new oo tcl widget class:
     oo::class create myWidget {::tko initfrom ::tko::frame}
 
-Add new methods:
+    # Create a new widget class.
+    oo::class create ::myWidget {
+      ::tko initfrom ::tko::frame
+      constructor {args} {next {*}$args}
+      destructor {next}
+      method mycmd {args} {my {*}$args}
+    }
 
-    oo::define ::myWidget method mycmd {args} {my {*}$args}
+    # Hide all inherited frame options
+    ::tko optionhide ::myWidget {*}[::tko optionshow ::myWidget]
 
-Add new class options:
+    # Add a new option
+    oo::define ::myWidget method -o1 {} {puts $tko(-o1)}
+    ::tko optionadd ::myWidget -o1 o1 O1 v1 {}
 
-    ::tko optionadd ::myWidget -o1 o1 O1 v1 {} {set tko(-o1) x}
+    # Add another option
+    ::tko optionadd ::myWidget -o2 o2 O2 v2 {} {puts $tko(-o2)}
 
-Add new object options:
+    # Add options at object level:
+    ::myWidget .w
+    .w mycmd _tko optionadd -o3 o3 O3 v3 {} {my variable tko; puts $tko(-o3)}
 
-    oo::define ::myWidget method mycmd {args} {my {*}$args}
-    ::myWidget .x
-    .x mycmd _tko optionadd -o2 o2 O2 v2 {} {puts o2=$tko(-o2)}
+    # Show all frame options again
+    .w mycmd _tko optionshow {*}[.w mycmd _tko optionhide]
 
-Intercept options:
-
+    # Intercept options
     oo::define ::myWidget method -width {} {
         puts "[my cget -width]->$tko(-width)->[set tko(-width) 100]"
     }
     .w configure -width 1
 
-Use option database for styles:
-
+    # Use option database for styles:
     option add *background red
     grid [tko::frame .f] -sticky nesw
     grid [label .f.l -text abc]
