--- a/tip/497.md
+++ b/tip/497.md
@@ -1,12 +1,11 @@
-# TIP 497: Full support for Unicode 11.0 and later (part 2)
+# TIP 497: Full support for Unicode planes 1-16.
 	Author:         Jan Nijtmans <jan.nijtmans@users.sf.net>
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
-	Author:         Don Porter <donald.porter@nist.gov>
 	State:          Draft
 	Type:           Project
 	Vote:           Pending
 	Created:        23-Jan-2018
-	Post-History:   
+	Post-History:
 	Discussions-To: Tcl Core list
 	Keywords:       Tcl
 	Tcl-Version:    9.0
@@ -15,44 +14,60 @@
 
 # Abstract
 
-This TIP proposes to add full support for all characters in Unicode 10.0\+,
-inclusive the characters >= **U\+010000**, even the adaptation in the regexp
+This TIP proposes to add full support for Unicode planes 1-16, which
+contain characters >= **U\+010000**, inclusive in the regexp
 engine. Also, the caveats remaining from TIP #389 will be handled here.
-
-# Summary
-
-TODO
 
 # Rationale
 
-TODO
+In Tcl 8.x, running `[length "😊"]` gives the result 2. The reason for
+this is that - internally - Tcl 8.x splits the character in two
+surrogate characters, so they fit in a 16-bit character array.
+This TIP (for Tcl 9.0) is meant to put an end to this workaround,
+providing a real solution.
 
 # Specification
 
 This document proposes:
 
- * Add a new objType "UTF-32", which is able to store a string in 32-bits
-   per character.
+ * Change the internal "string" objType, such that it will store 32-bit
+   characters in stead of 16-bit characters everywhere.
 
- * Adapt the regexp engine to start using the "UTF-32" objType: Any string
-   handled by regexp will first be converted to "UTF-32". (DONE in tip-497 branch)
+ * No longer consider Emoji to consist of 2 internal characters. So
+   `[length "😊"]  == 1`
 
- * Modify all API using Tcl_UniChar: If the string contains surrogate pairs,
-   the "UTF-32" objType will used.
-
- * Modify all functions using or producing an index: "string length <Unicode>"
-   should return 1 for all Unicode characters, even the ones >= **U\+010000**
-
-TODO: everything else that comes up
+ * Modify the Tcl_UniChar type, such that - by default -
+   `sizeof(Tcl_UniChar)` = 4 (was: 2).  All extensions assuming
+   `sizeof(Tcl_UniChar)` = 4 will be affected by this.
 
 # Compatibility
 
-TODO
+For Tcl 8.x, `sizeof(Tcl_UniChar)` = 2, all extensions assuming this
+will be affected. There are two ways extensions can be modified:
 
+ * Either fix the places in the code where Tcl_UniChar is used in
+   a non-portable way. The API introduced by TIP #548 can be used for that.
+
+ * An alternative is compile the extension using `-DTCL_UTF_MAX=3`. This
+   will restore `sizeof(Tcl_UniChar) == 2` for the extension. Almost
+   all (non-deprecated) Tcl API's can still be used by the extension,
+   except: `Tcl_NewUnicodeObj()`, `Tcl_SetUnicodeObj()`, `Tcl_GetUnicodeFromObj()`,
+   `Tcl_GetUnicode()`
+
+This change introduces a potential binary incompatibility: All extensions using
+any of the 4 following functions need to be recompiled:
+  * `Tcl_NewUnicodeObj()`
+  * `Tcl_SetUnicodeObj()`
+  * `Tcl_GetUnicodeFromObj()`
+  * `Tcl_GetUnicode()`
+None of the (battery-included) extensions included by Tcl (e.g. Thread, tdbc ...)
+are affected. Extension need to be aware that those 3 functions interface
+directly with the internal "string" objType, which is 16-bit in Tcl 8.x
+and 32-bit in Tcl 9.x.
 
 # Reference Implementation
 
-A reference implementation is ongoing in  the **tip-497** branch.
+A reference implementation is available in  the **tip-497** branch.
 <https://core.tcl-lang.org/tcl/timeline?r=tip-497>
 
 # Copyright
