Small fixes to 560

--- a/tip/560.md
+++ b/tip/560.md
@@ -1,4 +1,4 @@
-# TIP ???: Megawidget Configure/Property Support
+# TIP 560: Megawidget Configure/Property Support
         Author:         Donal K. Fellows <donal.k.fellows@manchester.ac.uk>
         State:          Draft
         Type:           Project
@@ -7,6 +7,7 @@
         Post-History:
         Tcl-Version:    8.7
         Keywords:       Tk, TclOO, properties
+		Tk-Branch:      tip-560
 ------
 
 # Abstract
@@ -265,7 +266,7 @@ It is up to the caller to ensure that default values actually pass validation ch
 
 # Implementation
 
-See the [`tip-???`]() branch.
+See the [`tip-560`](https://core.tcl-lang.org/tk/timeline?r=tip-560) branch.
 
 # Copyright
 
