TIP 599 Vote complete         Vote-Summary:   Accepted 8/0/0         Votes-For:      DP, JD, MC, KW, SL, FV, DF, JN         Votes-Against:  none         Votes-Present:  none

--- a/tip/559.md
+++ b/tip/559.md
@@ -1,12 +1,17 @@
 # TIP 559: Eliminate public routine `Tcl_FreeResult`
 	Author:         Don Porter <dgp@users.sourceforge.net>
-	State:          Draft
+	State:          Final
 	Type:           Project
 	Tcl-Version:    9.0
-	Vote:           In progress
+	Vote:           Done
 	Created:        13-Jan-2020
 	Keywords:       Tcl, result 
 	Post-History:
+	Tcl-Branch:	tip-599
+	Vote-Summary:	Accepted 8/0/0
+	Votes-For:	DP, JD, MC, KW, SL, FV, DF, JN
+	Votes-Against:	none
+	Votes-Present:	none
 -----
 
 # Abstract
