It helps if I read the docs for Tk_GetPixels() and [winfo fpixels]

--- a/tip/560.md
+++ b/tip/560.md
@@ -204,7 +204,8 @@ The standard types will be:
 
 * **zfloat**: any float (as above) or empty string. Defaults to the empty string.
 
-* **distance**: any screen distance. Defaults to **0px**.
+* **distance**: any screen distance (as parsed by **winfo fpixels**). Defaults
+  to **0p**.
 
 * **image**: name of any Tk image, or empty string. Defaults to the empty string.
 
