--- a/tip/561.md
+++ b/tip/561.md
@@ -7,6 +7,7 @@
         Post-History:
         Tcl-Version:    8.7
         Keywords:       Tk
+        Tk-Branch:      tip-561
 -----
 
 # Abstract
