Update 560 to reflect the code

--- a/tip/560.md
+++ b/tip/560.md
@@ -235,7 +235,7 @@ the constructor. This will result in a class definition (approximately) like
 this:
 
     oo::class create tk::propertytype {
-       constructor {testCommand default} {
+       constructor {default testCommand} {
           ... # trivial implementation that saves the params
        }
     
@@ -255,15 +255,45 @@ this:
        }
     }
 
-The **tk::propertytype create** class method will be overridden to insert the
-instance where it is needed (and will throw an error if any attempt is made to
-override an existing type). It will still return the full name of the instance
-to allow it to be used with **oo::objdefine** directly. It will also have a
-helper class method, **createtable**, that produces a type whose values must
-be picked from a table provided during creation time (with choices based on
-what **tcl::prefix match** can disambiguate).
+In practice, things are more complex because there are three basic ways to
+validate a value. In particular, there are types for which there are tests
+that return a boolean, types for which there are parsers that error on
+failure, and types that are driven by a table of permitted values. As such,
+**tk::propertytype** is actually an abstract class and there are concrete
+implementations of each of the validation options.
+
+When a type is created with **tk::propertytype createbool**, a boolean test is
+expected to be provided as a command fragment that takes a single extra
+argument. An example of the use is this, which makes the **boolean** type
+described above:
+
+    tk::propertytype createbool boolean "false" {
+        string is boolean -strict
+    }
+
+When a type is created with **tk::propertytype createthrow**, the test instead
+is expected to throw an error on failure. Because this can be more complex, we
+assume that the value being tested is passed in the (local) variable
+`$value`. An example of the use is this, which makes the **distance** type
+described above:
+
+    tk::propertytype createthrow distance "0px" {
+        winfo fpixels . $value
+    }
+
+When a type is created with **tk::propertytype createtable**, the test is
+driven by **tcl::prefix match** and all the caller has to do is supply the
+table. An example of this one is:
+
+    tk::propertytype createtable justify "left" {
+        center left right
+    }
 
 It is up to the caller to ensure that default values actually pass validation checks.
+
+Note that all of the types above are created with unqualified names; the names
+are mangled internally by the above methods so that they plug in correctly
+into the **tk::PropType** ensemble.
 
 # Implementation
 
