Update tip556 syntax description and new 'tko initclass' command

--- a/tip/556.md
+++ b/tip/556.md
@@ -27,27 +27,33 @@ The new widgets will contain the same functionality like the original *tk* widge
 The interface functions to build new widgets in C are described in 
 [`tko.3.md`](https://core.tcl-lang.org/tk/doc/tip-556/doc/tko.3.md).
 
-## Tcl widget creation
+## Tcl class creation
+
+**::oo::class create** *ooclass* { **::tko initclass** }
+
+The **tko initclass** function create on oo class with option handling.
 
 **::oo::class create** *widgetclass* { **::tko initfrom** *tkoclass* }
 
+The **tko initfrom** function use *tkoclass* as superclass.
+
 **::oo::class create** *widgetclass* { **::tko initwrap** *widget readonlyoptionlist ?commanlist?* }
 
-Both functions are used to create new oo class like widget in Tcl.
-The **tko initfrom** function use *tkoclass* as superclass.
 The **tko initwrap** function wraps an existing tk widget in an oo class widget.
 
 ## Class functions
 
 To provide dynamic option management at class level exists a **::tko** function.
 
+**::tko initclass**
+
 **::tko initfrom** *?superclass?*
 
 **::tko initwrap** *widget readonlyoptionlist ?commandlist?*
 
-**::tko eventchanged**
+**::tko eventoption**
 
-**::tko optiondef** *classname ?-option definitionlist? ..*
+**::tko optiondef** *classname ?-option definitionlist? .. ?body?*
 
 **::tko optiondel** *classname ?-option? ..* 
 
@@ -63,7 +69,7 @@ A detailed description can be found in [`tko.n.md`](https://core.tcl-lang.org/tk
 
 To manage options on object level exists an **\_tko** method. 
 
-**my \_tko optionadd** *-option {*\**}definitionlist*
+**my \_tko optionadd** *-option definitionlist ?body?*
 
 **my \_tko optiondel** *-option* ..
 
@@ -72,6 +78,27 @@ To manage options on object level exists an **\_tko** method.
 **my \_tko optionshow** *-option* ..
 
 A detailed description can be found in [`tko.n.md`](https://core.tcl-lang.org/tk/doc/tip-556/doc/tko.n.md).
+
+## Option definitionlist
+
+In the *definitionlist* description below an entry with name *flags* can contain a combination of the following letters:
+
+  - "r" the option is readonly and can only be set on creation
+  - "h" The option is hidden from use in **cget** and **configure** methods.
+
+The *definitionlist* can have one of the following forms:
+
+  - *{-synonym flags}*
+
+> Description of an synonym option. When *-option* is set then instead the provided *-synonym* option will be set.
+
+  - *{dbname dbclass default flags}*
+
+> Description of an option.
+If *dbname* or *dbclass* is not empty then the values will be used to search for an default option value in the option database.
+The search will need a **Tk\_Window** and therefore this definition can only be used in an widget class.
+If both value are empty then the option definition can be used in an normal class create with **tko initclass**.
+*default* is the default value if no value can be found in the option database.
 
 # Rationale
 
@@ -116,17 +143,41 @@ To compare the speed of the new widgets you can run the test frame-30.1. It will
 
 # Examples
 
-    # Wrap an existing widget:
-    oo::class create ::myFrame {
-      ::tko initwrap frame {-class -container -colormap -visual}
+    #
+    # Configurable object
+    #
+    oo::class create A {
+      ::tko initclass
     }
-    myFrame .f
+    A create a1
+    a1 configure ==>
 
-    # Create a new oo tcl widget class:
-    oo::class create myWidget {::tko initfrom ::tko::frame}
+    # Add class option
+    ::tko optiondef A -o1 {o1 O1 v1 {}} {set tko(-o1) x}
+    A create a2
+    a2 configure
+    ==> {-o1 o1 O1 v1 v1}
 
+    # Add object option
+    oo::define A method mycmd {args} {my {*}$args}
+    a2 mycmd _tko optionadd -o2 {o2 O2 v2 {}} {variable tko; set tko(-o2) x}
+    a2 configure
+    ==> {-o1 o1 O1 v1 v1} {-o2 o2 O2 v2 x}
+
+    #
+    # Wrap an existing widget
+    #
+    oo::class create B {
+      ::tko initwrap frame {-class -container -colormap -visual} {}
+    }
+    B .b
+    lindex [.b configure] 0
+    ==> {-background background Background SystemButtonFace SystemButtonFace}
+
+    #
     # Create a new widget class.
-    oo::class create ::myWidget {
+    #
+    oo::class create C {
       ::tko initfrom ::tko::frame
       constructor {args} {next {*}$args}
       destructor {next}
@@ -134,27 +185,41 @@ To compare the speed of the new widgets you can run the test frame-30.1. It will
     }
 
     # Hide all inherited frame options
-    ::tko optionhide ::myWidget {*}[::tko optionshow ::myWidget]
+    ::tko optionhide C {*}[::tko optionhide C]
+    ::tko optionshow C
+    ==> -class -visual -colormap -container -borderwidth ...
+    C .c
+    .c configure
+    ==>
 
     # Add a new option
-    oo::define ::myWidget method -o1 {} {puts $tko(-o1)}
-    ::tko optionadd ::myWidget -o1 o1 O1 v1 {}
+    oo::define C method -o1 {} {puts $tko(-o1)}
+    ::tko optiondef C -o1 {o1 O1 v1 {}}
+    ::tko optionhide C
+    ==> -o1
 
     # Add another option
-    ::tko optionadd ::myWidget -o2 o2 O2 v2 {} {puts $tko(-o2)}
+    ::tko optiondef C -o2 {o2 O2 v2 {}} {puts $tko(-o2)}
+    ::tko optionhide C
+    ==> -o1 -o2
 
     # Add options at object level:
-    ::myWidget .w
-    .w mycmd _tko optionadd -o3 o3 O3 v3 {} {my variable tko; puts $tko(-o3)}
+    C .c1
+    .c1 mycmd _tko optionadd -o3 {o3 O3 v3 {}} {my variable tko; puts $tko(-o3)}
+    .c1 configure
+    ==> {-o1 o1 O1 v1 v1} {-o2 o2 O2 v2 v2} {-o3 o3 O3 v3 v3}
 
     # Show all frame options again
-    .w mycmd _tko optionshow {*}[.w mycmd _tko optionhide]
+    .c1 mycmd _tko optionshow {*}[.c1 mycmd _tko optionshow]
+    llength [.c1 configure]
+    ==> 24
 
     # Intercept options
-    oo::define ::myWidget method -width {} {
+    oo::define C method -width {} {
         puts "[my cget -width]->$tko(-width)->[set tko(-width) 100]"
     }
-    .w configure -width 1
+    .c1 configure -width 1
+    ==> 0->1->100
 
     # Use option database for styles:
     option add *background red
@@ -181,7 +246,16 @@ See also discussion at the [wiki](https://wiki.tcl-lang.org/page/Tip+556%3A+Add+
 
 - An oo widgets needs more time to create then an normal tk widget, nearly the same time to call functions and less time to destroy. But the time is comparable to tko widgets (see in tests/tko/tkoFrame.test test frame-30.1). This needs some investigation. The authors current assumption is the time is spent in calling "**my** *-option*" methods from inside C. Currently **Tcl\_EvalObjv()** is used. Are there better ways?
 
+- The implementation of tko::toplevel has one hack. In tkWinMn.c 
+  tkWinWM.c will call TkInstallFromMenu() from file tkFrame.c for toplevels.
+  Inside these function a struct Frame and memeber menuName will be used.
+  We have to ensure that our structure has the same form as Frame.
+  Therefore we place some dummy arguments in the structure.
+
+
 # Alternatives
+
+- See tip-558 and tip-560 here.
 
 - Use one of the existing megawidgets implemented in tcl.
 
