Describe some of the interactions of 560 now that I know what more of them are...

--- a/tip/560.md
+++ b/tip/560.md
@@ -96,8 +96,8 @@ full list (not fully shown above) is:
 
     The default value of the option, used when no other default is
     available. Its default will depend on the type of the option (see below),
-    but is usually either the empty string or a zero value. It is up to the
-    caller to ensure that the default is legal for the type.
+    but is usually either the empty string or a zero value. The default will
+    be validated against the type.
 
 * **-type** *typeName*
 
@@ -154,13 +154,37 @@ failure; the caller can do any system validation afterwards, and validation
 failures are expected to abort widget creation altogether rather than rolling
 anything back.
 
-## Interaction with Fundamental TclOO Mechanisms
+## Interaction with Fundamental TclOO and Tk Mechanisms
 
 As all properties are readable in Tk, all will be listed in the readable
 properties of the class. Most properties will also be listed in the writable
 properties of the class, but initialisation only properties will not.
 
-_TODO: describe what internal methods are used to implement properties._
+The following methods will be created for each property (where _name_ is the
+hyphen-prefixed version of the name):
+
+* **<OptDescribe**_name_**>** — takes no arguments and returns a description
+  of the parts of the property descriptor that do not change. In particular,
+  this is a list of three items; these are the option database name of the
+  property, the option database class of the property, and the actual default
+  value of the property.
+
+* **<OptValidate**_name_**>** — takes a single value, checks whether the value
+  is of the type of the property, and returns the normalized property value.
+  Typically forwarded to the **validate** method of the property's type
+  object.
+
+Again, also note that the actual storage of the options is the array in the
+class with the empty name. C code may need to set traces on elements of the
+array; these may be established before or after the **Initialise** method is
+called.
+
+Note that **Initialise** requires an existing widget name. A consequence of
+that is that any true initialisation-only properties that need to be passed to
+that widget must be manually parsed before the widget is created (_or_ the
+widget can be created, used for parsing, and then destroyed and rebuilt with
+the correct options; that's not too expensive if the temporary widget is never
+mapped).
 
 ## Property Types
 
@@ -289,7 +313,8 @@ table. An example of this one is:
         center left right
     }
 
-It is up to the caller to ensure that default values actually pass validation checks.
+It is up to the caller to ensure that each type's default values actually pass
+validation checks.
 
 Note that all of the types above are created with unqualified names; the names
 are mangled internally by the above methods so that they plug in correctly
